add documentation of category
